# gonk

./: Cargo.toml  README.md
.github/workflows/: publish.yml  release.yml
mu/: Cargo.toml
mu/src/: browser.rs  main.rs  playlist.rs  queue.rs  search.rs  settings.rs
mu_core/: Cargo.toml
mu_core/benches/: flac.rs
mu_core/src/: db.rs  flac_decoder.rs  index.rs  lib.rs  playlist.rs
mu_player/: Cargo.toml
mu_player/src/: decoder.rs  lib.rs  main.rs
