[package]
name = "mu"
version = "0.3.0"
edition = "2021"
authors = ["Bay"]
description = "A terminal music player"
repository = "https://github.com/zfphex/mu"
readme = "../README.md"
license = "CC0-1.0"
default-run = "mu"

[features]
profile = ["mu_core/profile"]
simd = ["mu_core/simd"]
info = ["mu_player/info", "mini/info"]
warn = ["mu_player/warn", "mini/warn"]
error = ["mu_player/error", "mini/error"]


[dependencies]
rayon = "1.7.0"
mu_player = { version = "0.3.0", path = "../mu_player" }
mu_core = { version = "0.3.0", path = "../mu_core" }
mini = { git = "https://github.com/zfphex/mini", version = "0.1.0" }
winter = { version = "0.1.0", git = "https://github.com/zfphex/winter" }
# winter = { version = "0.1.0", path = "../../winter" }
